fix alignment

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ image-getter {
         grid-row: 2 / 3;
         grid-column: 1 / 3;
         text-align: right;
+        display: block;
         padding-right: 1em;
     }
 
@@ -100,6 +101,7 @@ image-getter {
         grid-row: 2 / 3;
         grid-column: 3 / 5;
         padding-left: 1em;
+        display: block;
     }
 
     input {
